Arreglo error modal
ahora funciona el modal

--- a/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
+++ b/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
@@ -34,7 +34,7 @@
         </div> -->
         <div class="input" id="project">
           {{ form_proyecto.as_p }}
-          <label class="input-label">Proyecto ascociado</label>
+          <label class="input-label">Proyecto asociado</label>
         </div>
         <div class="input" id="reportImage">
           {{ form_imagen.as_p }}
