--- a/bug_tracking/home/static/css/register.css
+++ b/bug_tracking/home/static/css/register.css
@@ -151,3 +151,14 @@ a{color:inherit;text-decoration:none}
 	text-align:center;
     color: white;
 }
+/* Mejorar este css */
+.warning-icon {
+    display: none;
+    color: red;
+  }
+  
+  .warning-message {
+    display: none;
+    color: red;
+    font-size: 12px;
+  }
