--- a/bug_tracking/home/static/css/start.css
+++ b/bug_tracking/home/static/css/start.css
@@ -256,7 +256,7 @@
     margin-bottom: 1%;
 }
 .graph .plot-container.plotly{
-    background-color: var(--primary-color);
+    background-color: var(--sidebar-color);
     border-radius: 10px;
 
 }
