--- a/bug_tracking/database/templates/admin/database/reasignacion/change_form.html
+++ b/bug_tracking/database/templates/admin/database/reasignacion/change_form.html
@@ -52,9 +52,9 @@
             {% if errors %}
                 <div class="alert alert-danger">
                     {% if errors|length == 1 %}
-                        {% trans "Please correct the error below." %}
+                        {% trans "Por favor, corrija el error a continuación." %}
                     {% else %}
-                        {% trans "Please correct the errors below." %}
+                        {% trans "Por favor, corrija el error a continuación." %}
                     {% endif %}
                 </div>
                 {% for error in adminform.form.non_field_errors %}
