--- a/bug_tracking/database/templates/admin/database/reasignacion/submit_line.html
+++ b/bug_tracking/database/templates/admin/database/reasignacion/submit_line.html
@@ -15,8 +15,10 @@
         </div>
     {% endif %}
     <div class="form-group">
-        <a href="{% url opts|admin_urlname:'changelist' %}" class="btn {{ jazzmin_ui.button_classes.danger }} form-control">{% trans 'Desaprobar' %}</a>
-        <input type="submit" class="btn {{ jazzmin_ui.button_classes.info }} form-control" value="{% trans 'Desaprobar' %}" name="_desaprobar">
+        {% if user.is_superuser %}
+            <a href="{% url opts|admin_urlname:'changelist' %}" class="btn {{ jazzmin_ui.button_classes.danger }} form-control">{% trans 'Desaprobar' %}</a>
+            <input type="submit" class="btn {{ jazzmin_ui.button_classes.info }} form-control" value="{% trans 'Desaprobar' %}" name="_desaprobar">
+        {% endif %}
     </div>
 
     {% if show_save_as_new %}
