--- a/bug_tracking/buglist/templates/buglist/buglist.html
+++ b/bug_tracking/buglist/templates/buglist/buglist.html
@@ -321,7 +321,7 @@
       bugListUrl = updateURLParameter(bugListUrl, 'bug_order', filter);
       bugListUrl = updateURLParameter(bugListUrl, 'bug_order_direction', newOrder);
 
-      history.pushState(null, null, bugListUrl);
+      //history.pushState(null, null, bugListUrl);
 
       $('#bug-table').load(bugListUrl + ' #bug-table', function() {
         // Actualizar la paginación también si es necesario
@@ -337,7 +337,7 @@
       var bugListUrl = updateURLParameter(window.location.href, 'bug_page', pageNumber);
       bugListUrl = updateURLParameter(bugListUrl, 'bug_order_direction', currentBugOrder);
 
-      history.pushState(null, null, bugListUrl);
+      //history.pushState(null, null, bugListUrl);
 
       $('#bug-table').load(bugListUrl + ' #bug-table', function() {
         // Actualizar la paginación también si es necesario
@@ -347,26 +347,26 @@
 
     function loadBugSearch(event) {
       event.preventDefault();
-
-      var searchValue = $('#search-input-bug').val();
-
+    
+      var searchValue = $('#search-input-bug').val().trim();  // Utiliza trim() para eliminar espacios adicionales al inicio y al final
+    
       var bugListUrl = window.location.href;
       bugListUrl = updateURLParameter(bugListUrl, 'bug_page', '1');
-
+    
       if (searchValue !== '') {
-        bugListUrl = updateURLParameter(bugListUrl, 'bug_search', searchValue);
+        bugListUrl = updateURLParameter(bugListUrl, 'bug_search', encodeURIComponent(searchValue));  // Codifica la cadena de búsqueda completa
       } else {
         bugListUrl = removeURLParameter(bugListUrl, 'bug_search');
       }
-
-      console.log(searchValue);
-      history.pushState(null, null, bugListUrl);
-
+      
+      //history.pushState(null, null, bugListUrl);
+    
       $('#bug-table').load(bugListUrl + ' #bug-table', function() {
         // Actualizar la paginación también si es necesario
         $('.bug-pagination').load(bugListUrl + ' .bug-pagination');
       });
     }
+    
 
     function loadReportFilter(event, filter) {
       event.preventDefault();
@@ -377,7 +377,7 @@
       reportListUrl = updateURLParameter(reportListUrl, 'report_order', filter);
       reportListUrl = updateURLParameter(reportListUrl, 'report_order_direction', newOrder);
 
-      history.pushState(null, null, reportListUrl);
+      //history.pushState(null, null, reportListUrl);
 
       $('#report-table').load(reportListUrl + ' #report-table', function() {
         // Actualizar la paginación también si es necesario
@@ -393,7 +393,7 @@
       var reportListUrl = updateURLParameter(window.location.href, 'report_page', pageNumber);
       reportListUrl = updateURLParameter(reportListUrl, 'report_order_direction', currentReportOrder);
 
-      history.pushState(null, null, reportListUrl);
+      //history.pushState(null, null, reportListUrl);
 
       $('#report-table').load(reportListUrl + ' #report-table', function() {
         // Actualizar la paginación también si es necesario
@@ -410,12 +410,12 @@
       reportListUrl = updateURLParameter(reportListUrl, 'report_page', '1');
 
       if (searchValue !== '') {
-        reportListUrl = updateURLParameter(reportListUrl, 'report_search', searchValue);
+        reportListUrl = updateURLParameter(reportListUrl, 'report_search', encodeURIComponent(searchValue));
       } else {
         reportListUrl = removeURLParameter(reportListUrl, 'report_search');
       }
 
-      history.pushState(null, null, reportListUrl);
+      //history.pushState(null, null, reportListUrl);
 
       $('#report-table').load(reportListUrl + ' #report-table', function() {
         // Actualizar la paginación también si es necesario
