--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -6,7 +6,7 @@
   {%if request.user.is_authenticated%}
   <div class="text" style="text-align: center;">Bienvenido {{request.user.username | title}}</div>
 
-  {%if not request.user.is_sta
+  {%if not request.user.is_staff%}
   <ul class="box-info">
     <li>
       <i class='bx bxs-calendar-check'></i>
