--- a/bug_tracking/home/templates/registration/login.html
+++ b/bug_tracking/home/templates/registration/login.html
@@ -34,7 +34,7 @@
               </div>
               <div class="group">
                 <input id="check" type="checkbox" class="check" checked>
-                <label for="check"><span class="icon"></span> Recordarme</label>
+                <label for="check" class="label"><span class="icon"></span> Recordarme</label>
               </div>
               <div class="hr"></div>
               <div class="foot-lnk">
