modificaciones pequeñas en el css y para probar cosas

--- a/bug_tracking/home/static/css/login.css
+++ b/bug_tracking/home/static/css/login.css
@@ -73,7 +73,7 @@ a{color:var(--text-color);text-decoration:none}
 .login-form .group .input,
 .login-form .group .button{
 	width:100%;
-	color:#fff;
+	color:var(--text-color);
 	display:block;
 }
 .login-form .group .input,
