--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -34,34 +34,38 @@
       <div class="order">
         <div class="head">
           <h3>Bandeja de notificaciones</h3>
-          
-          <!-- <a href="www.google.cl"><i class='bx bx-search'></i></a>
-          <i class='bx bx-filter'></i> -->
         </div>
         <table>
           <thead>
             <tr>
               <th>N°</th>
               <th>Mensaje</th>
+              <th>Fecha</th>
             </tr>
           </thead>
+          {% if notificaciones_usuario %}
+          
           <tbody>
-            
+            {% for notificacion in notificaciones_usuario %}
             <tr>
               <td>
-                <p>0</p>
+                {{ notificacion.id_notificacion }}
               </td>
               <td>
-                <p>No hay notificaciones</p>
+                {{ notificacion.descripcion }}
               </td>
-            
+              <td>
+                {{ notificacion.fecha_notificacion }}
+              </td>
             </tr>
-
-            <!-- <tr>
-              <td>No hay errores disponibles</p>
-            </tr> -->
-            
-          </tbody>
+            {%endfor%}
+          
+          {%else%}
+          <td></td>
+          <td>No hay notificaciones disponibles</td>
+          {%endif%}
+        </tbody>
+          
         </table>
       </div>
     </div>
@@ -71,7 +75,7 @@
       <div class="order">
         <div class="head">
           <h3>Tus reportes enviados</h3>
-          
+
           <a href="www.google.cl"><i class='bx bx-search'></i></a>
           <i class='bx bx-filter'></i>
         </div>
@@ -96,25 +100,27 @@
               <td>{{ ReporteBug.fecha_reporte }}</td>
               <td>{{ ReporteBug.id_proyecto.nombre_proyecto }}</td>
             </tr>
-              {%endfor%}
+            {%endfor%}
             {%else%}
             <tr>
+              <td></td>
               <td>No hay errores disponibles</p>
             </tr>
             {%endif%}
-            
+
           </tbody>
         </table>
       </div>
     </div>
   </div>
 
-
+  <!-- Vista de administrador-->
   {%else%}
+  {%if request.user.is_superuser%}
   <ul class="box-info">
     <li>
       <i class='bx bx-search-alt-2'></i>
-      
+
       <span class="text">
         <h3>{{cant_bugs_revision}}</h3>
         <p>tickets están en estado revisión</p>
@@ -128,7 +134,7 @@
       </span>
     </li>
     <li>
-      <i class='bx bxs-watch' ></i>
+      <i class='bx bxs-watch'></i>
       <span class="text">
         <h3>{{cant_reportes_pendientes}}</h3>
         <p>tickets en estado pendiente</p>
@@ -153,65 +159,108 @@
     <p>No hay datos para mostrar</p>
     {% endif %}
   </div>
-  {% endautoescape %}
+  {%endautoescape%}
   
-  
-  
-  <footer>
-    <div class="text" style="text-align: center;">
-      Hemos detectado que eres administrador, te recomendamos utilizar el panel de administración
-    </div>
-  </footer>
-  {%endif%}
+    
   {%else%}
-  <div class="parallax">
-    <div class="text">Inicio</div>
-    <p>Bienvenido a la plataforma de seguimiento de errores de IS2</p>
-    <a href="signup">Registrarme</a>
+  <!-- Vista programador -->
+  <ul class="box-info">
+    <li>
+      <i class='bx bx-search-alt-2'></i>
+      <span class="text">
+        <h3>{{cant_bugs_revision}}</h3>
+        <p>errores solucionados por ti</p>
+      </span>
+    </li>
+    <li>
+      <i class='bx bx-user-check'></i>
+      <span class="text">
+        <h3>{{cant_reportes_asignados}}</h3>
+        <p>errores tienes asignado</p>
+      </span>
+    </li>
+    <li>
+      <i class='bx bxs-watch'></i>
+      <span class="text">
+        <h3>{{cant_reportes_pendientes}}</h3>
+        <p>tickets en estado pendiente</p>
+      </span>
+    </li>
+
+  </ul>
+  {%autoescape off%}
+  <div class="graph">
+    <h2>Gráfico de reportes asignados</h2>
+    {%if plot_div %}
+    {{plot_div|safe}}
+    {%else%}
+    <p>No hay datos para mostrar</p>
+    {%endif%}
   </div>
-  <div class="info-view">
+  {%endautoescape%}
+    {%endif%} <!-- endiff de superuser -->
+
+    <div class="footer">
+      <div class="text" style="text-align: center;">
+        {%if request.user.is_superuser%}
+        Hemos detectado que eres administrador, te recomendamos utilizar el panel de administración
+        {%else%}
+        Hemos detectado que eres programador, te recomendamos utilizar el panel de programador
+        {%endif%}
+      </div>
+    </div>
+    {%endif%} <!-- endif de is staff -->
+
+    <!-- Vista de invitado -->
+    {%else%}
+    <div class="parallax">
+      <div class="text">Inicio</div>
+      <p>Bienvenido a la plataforma de seguimiento de errores de IS2</p>
+      <a href="signup">Registrarme</a>
+    </div>
+    <div class="info-view">
       <div class="box">
         <h2>Últimos reportes</h2>
         {% if listar_reportes %}
-        <table class="table"> 
-            <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Título</th>
-                  <th>Fecha</th>
-                  <th>Proyecto</th>
-                </tr>
-            </thead>
-            <tbody>
-              {% for ReporteBug in listar_reportes %}
-              <tr>
-                <td>{{ ReporteBug.id_reporte }}</td>
-                <td>{{ ReporteBug.titulo | truncatechars:30 }}</td>
-                <td>{{ ReporteBug.fecha_reporte | naturaltime }}</td>
-                <td>{{ ReporteBug.id_proyecto.nombre_proyecto }}</td>
-              </tr>
-              {%endfor%}
-            </tbody>
-        </table>
-        {% else %}
-        <table class="table"> 
+        <table class="table">
           <thead>
-              <tr>
-                <th>ID</th>
-                <th>Descripción</th>
-                <th>Prioridad</th>
-                <th>Estado</th>
-                <th>Proyecto</th>
-              </tr>
+            <tr>
+              <th>ID</th>
+              <th>Título</th>
+              <th>Fecha</th>
+              <th>Proyecto</th>
+            </tr>
           </thead>
           <tbody>
-              <tr>
-                <td colspan="4" style="text-align: center">No hay errores disponibles</td>
-              </tr>
-            </tbody>
-      </table>
-      {% endif %}
-    </div>
+            {% for ReporteBug in listar_reportes %}
+            <tr>
+              <td>{{ ReporteBug.id_reporte }}</td>
+              <td>{{ ReporteBug.titulo | truncatechars:30 }}</td>
+              <td>{{ ReporteBug.fecha_reporte | naturaltime }}</td>
+              <td>{{ ReporteBug.id_proyecto.nombre_proyecto }}</td>
+            </tr>
+            {%endfor%}
+          </tbody>
+        </table>
+        {% else %}
+        <table class="table">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Descripción</th>
+              <th>Prioridad</th>
+              <th>Estado</th>
+              <th>Proyecto</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td colspan="4" style="text-align: center">No hay errores disponibles</td>
+            </tr>
+          </tbody>
+        </table>
+        {% endif %}
+      </div>
 
 
 
@@ -223,7 +272,7 @@
           <h3>Hemos resuelto más de {{total_bug}} errores</h3>
         </div>
       </div>
-      
+
       <div class="box">
         <div class="text-info">
           <h3>Hemos recibido más de {{total_report}} reportes</h3>
@@ -232,75 +281,75 @@
       <div class="box">
         <h2>Últimos errores</h2>
         {% if listar_bug %}
-        <table class="table"> 
-            <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Título</th>
-                  <th>Fecha</th>
-                  <th>Proyecto</th>
-                </tr>
-            </thead>
-            <tbody>
-              {% for Bug in  listar_bug%}
-              <tr>
-                  <td>{{ Bug.id_bug }}</td>
-                  <td>{{ Bug.titulo | truncatechars:30 }}</td>
-                  <td>{{ Bug.fecha_reporte | naturaltime }}</td>
-                  <td>{{ Bug.id_proyecto.nombre_proyecto }}</td>
-              </tr>
-              {%endfor%}
-              </tbody>
-        </table>
-        {% else %}
-        <table class="table"> 
+        <table class="table">
           <thead>
-              <tr>
-                <th>ID</th>
-                <th>Descripción</th>
-                <th>Prioridad</th>
-                <th>Estado</th>
-                <th>Proyecto</th>
-              </tr>
+            <tr>
+              <th>ID</th>
+              <th>Título</th>
+              <th>Fecha</th>
+              <th>Proyecto</th>
+            </tr>
           </thead>
           <tbody>
-              <tr>
-                <td colspan="4" style="text-align: center">No hay reportes disponibles</td>
-              </tr>
-            </tbody>
-      </table>
-      {% endif %}
-    </div>
-  </div>
-  <div class="parallax second">
-    <div class="item">
-      <div class="img img-first"></div>
-      <div class="card">
-        <h2>Lista de bugs</h2>
-        <p>Revisa todos los bugs en los que estamos trabajando</p>
-        <a href="{% url 'buglist:bug_list' %}">Ir a la buglist</a>
+            {% for Bug in  listar_bug%}
+            <tr>
+              <td>{{ Bug.id_bug }}</td>
+              <td>{{ Bug.titulo | truncatechars:30 }}</td>
+              <td>{{ Bug.fecha_reporte | naturaltime }}</td>
+              <td>{{ Bug.id_proyecto.nombre_proyecto }}</td>
+            </tr>
+            {%endfor%}
+          </tbody>
+        </table>
+        {% else %}
+        <table class="table">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Descripción</th>
+              <th>Prioridad</th>
+              <th>Estado</th>
+              <th>Proyecto</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td colspan="4" style="text-align: center">No hay reportes disponibles</td>
+            </tr>
+          </tbody>
+        </table>
+        {% endif %}
       </div>
     </div>
-    <div class="item">
-      <div class="img img-second"></div>
-      <div class="card">
-        <h2>Reportar bug</h2>
-        <p>Avísanos de un bug en alguno de los proyectos</p>
-        <a href="{% url 'report:reportar_bug' %}">Reportar</a>
+    <div class="parallax second">
+      <div class="item">
+        <div class="img img-first"></div>
+        <div class="card">
+          <h2>Lista de bugs</h2>
+          <p>Revisa todos los bugs en los que estamos trabajando</p>
+          <a href="{% url 'buglist:bug_list' %}">Ir a la buglist</a>
+        </div>
+      </div>
+      <div class="item">
+        <div class="img img-second"></div>
+        <div class="card">
+          <h2>Reportar bug</h2>
+          <p>Avísanos de un bug en alguno de los proyectos</p>
+          <a href="{% url 'report:reportar_bug' %}">Reportar</a>
+        </div>
+      </div>
+      <div class="item">
+        <div class="img img-third"></div>
+        <div class="card">
+          <h2>Iniciar sesión</h2>
+          <p>
+            Accede a tu cuenta para obtener más información sobre tus reportes
+          </p>
+          <a href="#">Iniciar sesión</a>
+        </div>
       </div>
     </div>
-    <div class="item">
-      <div class="img img-third"></div>
-      <div class="card">
-        <h2>Iniciar sesión</h2>
-        <p>
-          Accede a tu cuenta para obtener más información sobre tus reportes
-        </p>
-        <a href="#">Iniciar sesión</a>
-      </div>
-    </div>
-  </div>
-  {%endif%}
+    {%endif%}
 
 </section>
 {% endblock %}
