--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -148,7 +148,7 @@
     {% if bar_fig %}
     {{ bar_fig|safe }}
     {% else %}
-    <p>No hay datos para mostrar</p>
+    <h2>No hay datos para mostrar</h2>
     {% endif %}
   </div>
 
@@ -156,7 +156,7 @@
     {% if plot_div %}
     {{ plot_div|safe }}
     {% else %}
-    <p>No hay datos para mostrar</p>
+    
     {% endif %}
   </div>
   {%endautoescape%}
