--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="bottom-content">
-                {% if user.is_superuser %}
+                {% if user.is_staff %}
                     <li class="nav-link">
                         <a href="{% url 'admin:index' %}">
                             <i class='bx bx-cog icon' ></i>
@@ -108,7 +108,7 @@
                             <span class="text nav-text">Cerrar sesión</span>
                         </a>
                     {%else%}
-                        <a href="login">
+                        <a href="{% url 'home:login' %}">
                             <i class='bx bx-log-in icon' ></i>
                             <span class="text nav-text">Iniciar sesión</span>
                         </a>
