--- a/bug_tracking/home/static/css/login.css
+++ b/bug_tracking/home/static/css/login.css
@@ -45,6 +45,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .label,
 .login-form .group .button{
 	text-transform:uppercase;
+	color: white;
 
 }
 .login-html .tab{
@@ -84,7 +85,6 @@ a{color:inherit;text-decoration:none}
 	background:rgba(255,255,255,.1);
 }
 .login-form .group input[data-type="password"]{
-	text-security:circle;
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
@@ -154,4 +154,9 @@ a{color:inherit;text-decoration:none}
 
 .bottom-content li.login-button{
 	display: none;
+}
+
+input:-webkit-autofill{
+    -webkit-text-fill-color: white;
+    transition: background-color 5000s ease-in-out 0s; /* Evita que el color de fondo cambie a blanco */
 }
